# form2slides

./: .gitignore  README.md  flake.nix  pyproject.toml
form2slides/: __init__.py  auth.py  form2slides.py  shuffle.py
